2012-11-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: improved the function
	"ui_print_agent_autocomplete_input" to get the default value for
	"hidden_input_idagent_value" from the GET or POST instead to set
	as 0.

2012-11-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php: cleaned source code style.
	
	* operation/events/events_list.php: cleaned source code style and
	fixed the lost id_agent when reload.

2012-11-05  Vanessa Gil <vanessa.gil@artica.es>

	* operation/reporting/reporting_xml.php: Moved functions
	to functions_xml.php
	* include/functions_xml.php: Added file.

2012-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fixed a bug of the events/alerts/unwknown
	period calculation

2012-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_alert_macros.php
	include/help/es/help_alert_macros.php: Fixed typo in macro name

2012-11-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php: improved the page status
	monitor, show in another column the tags and added a select box with
	the tags in user in the filter form.
	
	Pending task: #3581578

2012-11-04  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/planned_downtime.editor.php: Fixed that time range
	of once planned downtime cannot be changed.

2012-11-04  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/planned_downtime.list.php: Improved to show time
	range of periodically planned downtime.

2012-11-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/users/configure_user.php: cleaned source code style.
	
	* include/styles/pandora.css, godmode/users/user_list.php: improved
	the row aspect of disabled users in the list.
	
	Pending task: #3540077

2012-11-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php, extensions/update_manager.php:
	cleaned source code style.
	
	* include/functions_ui.php: fixed or improved the function